# vibe-terminal

./: .gitignore  GEMINI.md  gemini-current-command.sh  install-server  package.json  resume_prompt.md  tsconfig.base.json  turbo.json
.vibe/: AGENTS.md  DOCUMENTATION.md
.vibe/MODES/: BOOT.md  DOC_SCRIBE.md  ORCHESTRATOR.md  WORKER.md
.vibe/agents/194d640c-31ff-4a7f-bbc1-74418c00240c/1a68ad1b-d2fe-4946-86c4-904ea7f3f288/: INSTRUCTION.md  RESULT.md  debug_log.txt
.vibe/agents/194d640c-31ff-4a7f-bbc1-74418c00240c/a6934046-116e-47cc-83f8-3f4795c87054/: INSTRUCTION.md  RESULT.md  debug_log.txt
.vibe/agents/194d640c-31ff-4a7f-bbc1-74418c00240c/cc30ce73-a182-41b8-9ebf-242a1db3d438/: INSTRUCTION.md  RESULT.md  TASK_GRAPH.json  debug_log.txt
.vibe/agents/194d640c-31ff-4a7f-bbc1-74418c00240c/e41558b6-540e-4cb6-ba33-d55ee722b857/: INSTRUCTION.md  RESULT.md  debug_log.txt
.vibe/agents/194d640c-31ff-4a7f-bbc1-74418c00240c/f492b125-0600-4fbf-bf14-a5c6876e1ec0/: INSTRUCTION.md  RESULT.md  debug_log.txt
.vibe/agents/2239e913-d380-453e-abc4-591a1a776130/36ce9d73-3d46-49f7-bde8-3039e57f9d8e/: INSTRUCTION.md  debug_log.txt  tasks.json  vibe-complete  vibe-report
.vibe/agents/32f81b05-1e4b-4dac-8cb0-dd8fadb49a5c/3cf3554a-291a-42c2-a00c-834089e3dbd2/: INSTRUCTION.md  debug_log.txt
.vibe/agents/33a051c1-235f-4648-b055-956714371cec/1963bb68-6374-4323-8676-e91a4026aa9b/: INSTRUCTION.md  debug_log.txt
.vibe/agents/33a051c1-235f-4648-b055-956714371cec/2cac7957-6c15-4bf6-a5ac-603e3bba1266/: INSTRUCTION.md  RESULT.md  debug_log.txt
.vibe/config/: project.json  rules.json
TODOS/: high-level-plan.md
agents/gemini-test-session/147fd31b-c5a6-48b2-9b52-316674786f2f/: debug_log.txt
agents/human-test-session/b4915dc9-fe8b-4ac7-a8fb-a1ccf8436bdf/: INSTRUCTION.md
agents/human-test-session/e7373d17-71ab-46de-bc2d-8d986d69c785/: INSTRUCTION.md
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts
apps/mobile/: app.json  babel.config.js  package.json  tsconfig.json
apps/mobile/app/: [sessionId].tsx  _layout.tsx  index.tsx
apps/vibe-web/: package.json  tsconfig.json
apps/vibe-web/src/app/: layout.tsx  page.tsx
dev-tools/: start_server.sh  stop_server.sh  tail_logs.sh  test_ask.sh  trigger_session.sh
prompts/profiles/asv-orchestrator/: AGENTS.md
server/: Cargo.toml
server/src/: api.rs  config.rs  global_registry.rs  lib.rs  main.rs  profiles.rs  project_sessions.rs  sessions.rs  state.rs  tasks.rs  vibe_project.rs  ws.rs
server/src/agents/: dispatcher.rs  mod.rs  registry.rs  spawner.rs  watcher.rs
server/src/llm/: dummy.rs  mod.rs
server/src/llm/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs
server/src/shims/: vibe_ask.rs  vibe_complete.rs  vibe_report.rs
server/src/utils/: process.rs
server/tests/: global_registry.rs  project_sessions.rs  vibe_init.rs
server/tests/scripts/: dummy_agent.sh  gemini_adapter.js  list_models.js
(+125 files in other folders)
