[package]
name = "agent-hub-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vibe-report"
path = "src/shims/vibe_report.rs"

[[bin]]
name = "vibe-complete"
path = "src/shims/vibe_complete.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "ws", "json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", features = ["executor"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde", "fast-rng"] }
parking_lot = "0.12"
async-stream = "0.3"
hyper = { version = "1.2", features = ["http1", "http2"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
dotenv = "0.15.0"
notify = "8.2.0"

[dev-dependencies]
tempfile = "3.10"
tower = "0.4"
